fix: correct note editor toolbar icon alignment and metadata API endpoint
- Fix vertical alignment of icons in note dialog toolbar buttons by adding flexbox centering
- Remove mermaid attribute from markdown component to fix ngx-markdown configuration error
- Change note metadata bulk endpoint from POST to PUT to match API specification

--- a/src/app/pages/tm/components/note-editor-dialog/note-editor-dialog.component.scss
+++ b/src/app/pages/tm/components/note-editor-dialog/note-editor-dialog.component.scss
@@ -35,6 +35,10 @@
   }
 
   button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     &.active {
       background-color: rgb(63 81 181 / 12%);
       color: #3f51b5;
@@ -43,6 +47,12 @@
     &:disabled {
       opacity: 0.5;
       cursor: not-allowed;
+    }
+
+    mat-icon {
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
 
